--- a/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lLayout_cam_msg_container"
     android:layout_width="match_parent"
     android:layout_height="225dp"
     android:background="@color/color_white"
@@ -8,20 +9,33 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
 
-    <com.cylan.jiafeigou.widget.FateLineView
-        android:id="@+id/fl_item_time_line"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        hunt:dashLineColor="@color/color_e8e8e8"
-        hunt:dashLineWidth="2dp"
-        hunt:innerCircleColor="@color/color_white"
-        hunt:innerCircleRadius="6dp"
-        hunt:outerCircleColor="@color/color_e8e8e8"
-        hunt:outerCircleRadius="10dp"
-        hunt:outerCircleStrokeWidth="4dp"
-        hunt:outerCircleY="10dp" />
+        android:layout_height="match_parent">
+
+        <com.cylan.jiafeigou.widget.FateLineView
+            android:id="@+id/fl_item_time_line"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            hunt:dashLineColor="@color/color_e8e8e8"
+            hunt:dashLineWidth="2dp"
+            hunt:innerCircleColor="@color/color_white"
+            hunt:innerCircleRadius="6dp"
+            hunt:outerCircleColor="@color/color_e8e8e8"
+            hunt:outerCircleRadius="10dp"
+            hunt:outerCircleStrokeWidth="4dp"
+            hunt:outerCircleY="10dp" />
+
+        <RadioButton
+            android:id="@+id/rbtn_item_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
 
     <RelativeLayout
         android:id="@+id/rLayout_cam_message"
