--- a/app/src/main/res/layout/layout_item_cam_msg_list_0.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_0.xml
@@ -33,7 +33,8 @@
             android:id="@+id/rbtn_item_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:clickable="false" />
     </FrameLayout>
 
     <LinearLayout
