--- a/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
@@ -33,7 +33,8 @@
             android:id="@+id/rbtn_item_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            android:clickable="false" />
     </FrameLayout>
 
 
@@ -69,7 +70,7 @@
                 android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:scaleType="fitXY"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/wonderful_pic_place_holder" />
 
             <ImageView
                 android:id="@+id/imgV_cam_message_pic_1"
@@ -79,7 +80,7 @@
                 android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:scaleType="fitXY"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/wonderful_pic_place_holder" />
 
             <ImageView
                 android:id="@+id/imgV_cam_message_pic_2"
@@ -89,7 +90,7 @@
                 android:layout_marginStart="2dp"
                 android:layout_weight="1"
                 android:scaleType="fitXY"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/wonderful_pic_place_holder" />
         </LinearLayout>
 
         <FrameLayout
