--- a/app/src/main/res/layout/fragment_mine_suggestion_client.xml
+++ b/app/src/main/res/layout/fragment_mine_suggestion_client.xml
@@ -28,21 +28,36 @@
             android:layout_width="40dp"
             android:layout_height="40dp" />
 
-        <TextView
-            android:layout_toLeftOf="@id/iv_mine_suggestion_client"
-            android:id="@+id/tv_mine_suggestion_client_speak"
-            android:background="@drawable/pic_container_blue"
-            android:textColor="@color/color_white"
-            android:textSize="14sp"
-            android:layout_marginRight="3dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:text="希望你们会做视频下载功能，非常实用呢"
+        <LinearLayout
             android:layout_marginTop="24dp"
-            android:layout_width="230dp"
-            android:layout_height="wrap_content" />
+            android:layout_toLeftOf="@id/iv_mine_suggestion_client"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:padding="10dp"
+                android:layout_gravity="center_vertical"
+                android:id="@+id/iv_send_pro"
+                android:src="@drawable/listview_loading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_mine_suggestion_client_speak"
+                android:background="@drawable/pic_container_blue"
+                android:textColor="@color/color_white"
+                android:textSize="14sp"
+                android:layout_marginRight="3dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:text="希望你们会做视频下载功能，非常实用呢"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </RelativeLayout>
 
 </LinearLayout>
