--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -95,6 +95,7 @@
     <color name="color_CCE1F0FF">#CCE1F0FF</color>
     <color name="color_FFDEDEDE">#FFDEDEDE</color>
     <color name="color_FFAAAAAA">#FFAAAAAA</color>
+    <color name="COLOR_CACACA">#CACACA</color>
 
 
     <color name="background_tab_pressed">#6633B5E5</color>
