语言包调整

--- a/app/src/main/res/layout/layout_item_cam_msg_list_0.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_0.xml
@@ -57,7 +57,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="26dp"
                 android:gravity="center"
-                android:text="fadfadfa"
                 android:textColor="@color/color_666666"
                 android:textSize="13sp" />
 
@@ -65,8 +64,7 @@
                 android:id="@+id/tv_cam_message_list_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="fadfadfa" />
+                android:layout_gravity="center_vertical" />
 
             <TextView
                 android:id="@+id/tv_cam_message_item_delete"
