--- a/app/src/main/res/layout/layout_item_cam_msg_list_0.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_0.xml
@@ -34,6 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/custom_rtbn_style1"
+            android:button="@null"
             android:clickable="false" />
     </FrameLayout>
 
@@ -64,7 +66,9 @@
                 android:id="@+id/tv_cam_message_list_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical" />
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/color_666666"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tv_cam_message_item_delete"
