--- a/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_list_1.xml
@@ -34,6 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/custom_rtbn_style1"
+            android:button="@null"
             android:clickable="false" />
     </FrameLayout>
 
