--- a/app/src/main/res/layout/layout_cam_live_control_layer.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer.xml
@@ -95,6 +95,8 @@
                     android:id="@+id/lLayout_protection"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_toStartOf="@+id/v_right"
                     android:visibility="gone" />
 
