--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -10,17 +10,17 @@
     <FrameLayout
         android:id="@+id/rLayout_cam_message_list_top"
         android:layout_width="match_parent"
-        android:layout_height="42dp">
+        android:layout_height="42dp"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_cam_message_list_date"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:drawableEnd="@drawable/icon_date_downtag_wonderful"
             android:drawablePadding="10dp"
-            android:drawableRight="@drawable/icon_date_downtag_wonderful"
-            android:gravity="center_vertical"
-            android:text="2015-06-12" />
+            android:gravity="center_vertical" />
 
         <TextView
             android:id="@+id/tv_cam_message_list_edit"
