--- a/app/src/main/res/layout/activity_cam_media.xml
+++ b/app/src/main/res/layout/activity_cam_media.xml
@@ -35,6 +35,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/fLayout_cam_handle_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
