--- a/app/src/main/res/layout/fragment_mine_friend_share_devices.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_share_devices.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/iv_mine_friends_share_devices_ok"
                 android:layout_marginBottom="2dp"
                 android:padding="15dp"
-                android:clickable="true"
+                android:clickable="false"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
                 android:layout_width="wrap_content"
