--- a/app/src/main/res/layout/layout_settings_item1.xml
+++ b/app/src/main/res/layout/layout_settings_item1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -29,4 +29,4 @@
         android:layout_height="1dp"
         android:layout_gravity="bottom"
         android:background="@color/color_e8e8e8" />
-</FrameLayout>
+</merge>
