--- a/app/src/main/res/layout/fragment_bind_scan.xml
+++ b/app/src/main/res/layout/fragment_bind_scan.xml
@@ -13,14 +13,29 @@
         android:layout_height="match_parent"
         hunt:hint="@string/EFAMILY_QRCODE_BOTTOM_TEXT" />
 
-    <ImageView
-        android:id="@+id/imgV_nav_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:padding="10dp"
-        android:src="@drawable/icon_nav_back_white" />
+    <FrameLayout
+        android:id="@+id/fLayout_top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imgV_nav_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:padding="10dp"
+            android:src="@drawable/icon_nav_back_white" />
+
+        <TextView
+            android:textColor="@color/color_white"
+            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/DEVICES_TITLE" />
+    </FrameLayout>
+
 
 </FrameLayout>
