--- a/app/src/main/res/layout/layout_fragment_media_video_details.xml
+++ b/app/src/main/res/layout/layout_fragment_media_video_details.xml
@@ -31,11 +31,12 @@
 
         <com.cylan.jiafeigou.widget.SimpleProgressBar
             android:id="@+id/vv_play_loading"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="10dp"
             android:visibility="invisible"
+            hunt:progress_radius="50dp"
             hunt:progress_point_radius="3dp"
             hunt:progress_stroke_color="@color/color_cecece"/>
     </com.cylan.jiafeigou.widget.ShadowFrameLayout>
