--- a/app/src/main/res/layout/view_video_detail.xml
+++ b/app/src/main/res/layout/view_video_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:hunt="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,22 +16,23 @@
             android:id="@+id/view_media_video_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible"/>
+            android:visibility="invisible" />
 
         <ImageView
             android:id="@+id/view_video_picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY" />
 
         <com.cylan.jiafeigou.widget.SimpleProgressBar
             android:id="@+id/view_media_video_loading_bar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="10dp"
             android:visibility="invisible"
             app:progress_point_radius="3dp"
-            app:progress_stroke_color="#CECECE"/>
+            app:progress_stroke_color="#CECECE"
+            hunt:progress_radius="50dp" />
     </com.cylan.jiafeigou.widget.ShadowFrameLayout>
 </FrameLayout>
