--- a/app/src/main/res/layout/activity_mag_live_item_invisible.xml
+++ b/app/src/main/res/layout/activity_mag_live_item_invisible.xml
@@ -1,15 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:hunt="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="48dp"
+xmlns:hunt="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:orientation="horizontal">
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <com.cylan.jiafeigou.widget.DashLineView
-        android:id="@+id/flv_mag_live_invisible"
-        android:layout_marginLeft="131dp"
+    <TextView
+        android:visibility="invisible"
+        android:id="@+id/tv_mag_live_day"
+        android:layout_width="117dp"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:text="@string/DOOR_TODAY"
+        android:textColor="@color/color_333333"
+        android:textSize="17sp" />
+
+    <LinearLayout
+        android:id="@+id/ll_icon_container"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
+        android:layout_marginLeft="12dp"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-    </com.cylan.jiafeigou.widget.DashLineView>
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_mag_live"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/icon_dot_gary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <com.cylan.jiafeigou.widget.DashLineView
+            android:id="@+id/flv_mag_live_invisible"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp">
+        </com.cylan.jiafeigou.widget.DashLineView>
+
+    </LinearLayout>
+
+</LinearLayout>
+
+<TextView
+    android:visibility="invisible"
+    android:id="@+id/tv_mag_live_time"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="11dp"
+    android:text="15:05:20 打开"
+    android:textColor="@color/color_333333"
+    android:textSize="16sp" />
 
 </LinearLayout>
