--- a/app/src/main/res/layout/fragment_home_mine_setting_about.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting_about.xml
@@ -142,6 +142,7 @@
         android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/tv_user_agreement"
         android:textColor="@color/color_4b9fd5"
         android:textSize="16sp"
         android:layout_gravity="center_horizontal"
