--- a/app/src/main/res/layout/layout_cam_live_control_layer.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer.xml
@@ -108,4 +108,19 @@
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/fLayout_land_date_container"
+        android:layout_width="280dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:background="@color/color_4C000000"
+        android:visibility="gone">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_land_date_list"
+            android:layout_width="180dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center" />
+    </FrameLayout>
 </FrameLayout>
