--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
         android:background="@drawable/icon_home_camera_online"
         hunt:t_border_color="@color/color_white"
         hunt:t_border_width="1dp"
@@ -34,8 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/v_icon_base_line_bottom"
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/img_device_icon"
+        android:layout_marginStart="15dp"
+        android:layout_toEndOf="@+id/img_device_icon"
         android:ellipsize="end"
         android:lines="1"
         android:maxLength="8"
@@ -48,14 +48,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/v_icon_base_line_bottom"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
-        android:layout_toRightOf="@+id/img_device_icon"
+        android:layout_toEndOf="@+id/img_device_icon"
         android:ellipsize="end"
         android:lines="1"
         android:maxLength="8"
         android:maxLines="1"
-        android:text="[20]ffafafafaf"
         android:textColor="@color/color_777777"
         android:textSize="14sp" />
 
@@ -64,8 +63,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/v_icon_base_line_bottom"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="15dp"
         android:layout_marginTop="15dp"
         android:textColor="@color/color_adadad"
         android:textSize="10sp" />
@@ -74,33 +73,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/v_stander"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_device_state_0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp" />
+            android:layout_margin="2dp"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/img_device_state_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp" />
+            android:layout_margin="2dp"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/img_device_state_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp" />
+            android:layout_margin="2dp"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/img_device_state_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp" />
+            android:layout_margin="2dp"
+            android:visibility="gone" />
     </LinearLayout>
 
     <View
