--- a/app/src/main/res/layout/fragment_mine_info_bind_phone.xml
+++ b/app/src/main/res/layout/fragment_mine_info_bind_phone.xml
@@ -55,7 +55,8 @@
             android:textSize="16sp"
             android:layout_centerVertical="true"
             android:hint="@string/PHONE_NUMBER"
-            android:maxLength="65"
+            android:maxLength="11"
+            android:inputType="phone"
             android:background="@null"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
