--- a/app/src/main/res/layout/fragment_home_wonderful_ext.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_ext.xml
@@ -58,7 +58,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <FrameLayout
-            android:id="@+id/fLayout_empty_view_container"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_white">
@@ -67,6 +67,14 @@
                 android:id="@+id/rV_wonderful_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+
+            <FrameLayout
+                android:id="@+id/fLayout_empty_view_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/color_white"
+                android:visibility="gone">
+            </FrameLayout>
         </FrameLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
