--- a/app/src/main/res/layout/fragment_delay_record_guide.xml
+++ b/app/src/main/res/layout/fragment_delay_record_guide.xml
@@ -7,29 +7,28 @@
               android:gravity="center_horizontal"
               android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/act_delay_record_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@color/color_0ba8cf"
+        android:padding="15dp">
 
-        <FrameLayout
-            android:id="@+id/fLayout_top_bar_container"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/act_delay_record_back"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/color_0ba8cf">
+            android:src="@drawable/icon_arrow_back"/>
 
-            <TextView
-                android:id="@+id/imgV_top_bar_center"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:drawableLeft="@drawable/icon_nav_back_white"
-                android:drawablePadding="15dp"
-                android:padding="15dp"
-                android:text="@string/Tap2_TitleName"
-                android:textColor="@color/color_white"
-                android:textSize="16sp"/>
-        </FrameLayout>
-    </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="SourceHanSansCN"
+            android:text="@string/Tap2_Timelapse_title"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"/>
+    </RelativeLayout>
 
     <ImageView
         android:layout_width="wrap_content"
