--- a/app/src/main/res/layout/layout_item_vedio_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_vedio_wonderful.xml
@@ -84,7 +84,7 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="12dp"
                     android:paddingRight="10dp"
-                    android:text="删除"
+                    android:text="@string/DELETE"
                     android:textColor="@color/color_4b9fd5"
                     android:textSize="11sp"/>
 
@@ -102,7 +102,7 @@
                     android:maxLength="8"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="摄像头水电费三点多"
+                    android:text="@string/Tap2_Index_DemoVideo"
                     android:textColor="@color/color_909090"
                     android:textSize="11sp"/>
             </LinearLayout>
@@ -118,7 +118,7 @@
                 android:drawablePadding="4dp"
                 android:drawableStart="@drawable/icon_share_item_wonderful_selector"
                 android:gravity="center"
-                android:text="分享"
+                android:text="@string/Tap3_ShareDevice_Button"
                 android:textColor="@color/color_909090"
                 android:textSize="11sp"/>
 
