--- a/app/src/main/res/layout/fragment_home_wonderful_ext.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_ext.xml
@@ -72,8 +72,15 @@
                 android:id="@+id/fLayout_empty_view_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/color_white"
-                android:visibility="gone">
+                android:background="@color/color_white">
+
+                <include
+                    android:id="@+id/fragment_wonderful_guide"
+                    layout="@layout/item_wonderful_guide"/>
+
+                <include
+                    android:id="@+id/fragment_wonderful_empty"
+                    layout="@layout/layout_wonderful_list_empty_view"/>
             </FrameLayout>
         </FrameLayout>
 
