--- a/app/src/main/res/layout/item_wonderful_guide.xml
+++ b/app/src/main/res/layout/item_wonderful_guide.xml
@@ -7,6 +7,7 @@
     <include layout="@layout/layout_item_vedio_wonderful"/>
 
     <Button
+        android:id="@+id/item_wonderful_to_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
