--- a/app/src/main/res/layout/layout_wonderful_list_empty_view.xml
+++ b/app/src/main/res/layout/layout_wonderful_list_empty_view.xml
@@ -3,6 +3,7 @@
               android:id="@+id/lLayout_wonderful_list_empty_view"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/color_white"
               android:orientation="vertical"
               android:weightSum="3">
 
