--- a/app/src/main/res/layout/fragment_delay_record_select_device.xml
+++ b/app/src/main/res/layout/fragment_delay_record_select_device.xml
@@ -6,34 +6,6 @@
               android:orientation="vertical">
 
     <FrameLayout
-        android:id="@+id/fLayout_top_bar_container"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/color_0ba8cf">
-
-        <TextView
-            android:id="@+id/fragment_delay_record_device_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="返回"
-            android:textColor="@color/color_white"
-            android:textSize="16sp"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_gravity="center_horizontal"
-            android:drawablePadding="15dp"
-            android:gravity="center_horizontal"
-            android:padding="15dp"
-            android:text="延时摄影"
-            android:textColor="@color/color_white"
-            android:textSize="16sp"/>
-    </FrameLayout>
-
-    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -49,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ImageView
                 android:layout_width="wrap_content"
