--- a/app/src/main/res/layout/item_wonderful_guide.xml
+++ b/app/src/main/res/layout/item_wonderful_guide.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:gravity="center_horizontal"
               android:orientation="vertical">
 
     <include layout="@layout/layout_item_vedio_wonderful"/>
@@ -10,8 +11,11 @@
         android:id="@+id/item_wonderful_to_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/Tap2_Index_OpenTimelapse"/>
+        android:layout_marginTop="60dp"
+        android:background="@drawable/btn_again_normal"
+        android:text="@string/Tap2_Index_OpenTimelapse"
+        android:textColor="@color/delay_record_start_now_color"
+        android:textSize="17sp"/>
 
 
 </LinearLayout>
