--- a/app/src/main/res/layout/fragment_delay_record_select_device.xml
+++ b/app/src/main/res/layout/fragment_delay_record_select_device.xml
@@ -7,6 +7,34 @@
 
     <FrameLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_0ba8cf">
+
+        <RelativeLayout
+            android:id="@+id/header_delay_record_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp">
+
+            <ImageView
+                android:id="@+id/header_delay_record_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_arrow_back"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:fontFamily="SourceHanSansCN"
+                android:text="@string/Tap2_Timelapse_title"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"/>
+        </RelativeLayout>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
