--- a/app/src/main/res/layout/fragment_delay_record.xml
+++ b/app/src/main/res/layout/fragment_delay_record.xml
@@ -3,9 +3,31 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@drawable/delay_record_bg"
               android:gravity="center_horizontal"
               android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/header_delay_record_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp">
+
+        <ImageView
+            android:id="@+id/header_delay_record_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_arrow_back"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="SourceHanSansCN"
+            android:text="@string/Tap2_Timelapse_title"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"/>
+    </RelativeLayout>
 
     <android.support.v7.widget.CardView
         android:id="@+id/act_delay_record_video_container"
@@ -22,12 +44,12 @@
             android:layout_height="198dp">
 
             <FrameLayout
-                android:id="@+id/act_delay_record_video_view_container"
+                android:id="@+id/fragment_delay_record_video_view_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
             <ImageView
-                android:id="@+id/act_delay_record_video_preview"
+                android:id="@+id/fragment_delay_record_video_preview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:alpha="0.6"
@@ -35,7 +57,7 @@
 
 
             <TextView
-                android:id="@+id/act_delay_record_play"
+                android:id="@+id/fragment_delay_record_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -44,7 +66,7 @@
         </FrameLayout>
 
         <TextView
-            android:id="@+id/act_delay_record_information"
+            android:id="@+id/fragment_delay_record_information"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:layout_gravity="bottom"
@@ -61,7 +83,7 @@
         android:layout_marginTop="75dp">
 
         <ImageView
-            android:id="@+id/act_delay_record_time_interval"
+            android:id="@+id/fragment_delay_record_time_interval"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -69,7 +91,7 @@
             android:src="@drawable/delay_icon_60time"/>
 
         <com.cylan.jiafeigou.widget.RecordControllerView
-            android:id="@+id/act_delay_record_controller"
+            android:id="@+id/fragment_delay_record_controller"
             android:layout_width="62dp"
             android:layout_height="62dp"
             android:layout_centerHorizontal="true"
@@ -78,7 +100,7 @@
             />
 
         <Button
-            android:id="@+id/act_delay_record_again"
+            android:id="@+id/fragment_delay_record_again"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -88,7 +110,7 @@
             android:visibility="gone"/>
 
         <ImageView
-            android:id="@+id/act_delay_record_time_duration"
+            android:id="@+id/fragment_delay_record_time_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
