--- a/app/src/main/res/layout/fragment_delay_record_guide.xml
+++ b/app/src/main/res/layout/fragment_delay_record_guide.xml
@@ -6,6 +6,36 @@
               android:clickable="true"
               android:gravity="center_horizontal"
               android:orientation="vertical">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_0ba8cf">
+
+        <RelativeLayout
+            android:id="@+id/header_delay_record_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:padding="15dp">
+
+            <ImageView
+                android:id="@+id/header_delay_record_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_arrow_back"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:fontFamily="SourceHanSansCN"
+                android:text="@string/Tap2_Timelapse_title"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"/>
+        </RelativeLayout>
+    </FrameLayout>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
