--- a/app/src/main/res/layout/fragment_cloud_live_videochat.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_videochat.xml
@@ -2,17 +2,23 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/color_white"
     android:clickable="true"
+    android:id="@+id/root_fl_video"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <VideoView
-        android:id="@+id/vv_chatvideo_from"
+    <FrameLayout
+        android:id="@+id/fl_video_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+        <VideoView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
 
         <Chronometer
             android:visibility="invisible"
