--- a/app/src/main/res/layout/activity_cloud_live.xml
+++ b/app/src/main/res/layout/activity_cloud_live.xml
@@ -20,6 +20,7 @@
             android:src="@drawable/icon_nav_back_white" />
 
         <TextView
+            android:id="@+id/tv_device_name"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="12dp"
             android:textSize="18sp"
