--- a/app/src/main/res/layout/fragment_cloud_live_videochat_connect.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_videochat_connect.xml
@@ -1,73 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/bg_call_in"
-    android:clickable="true"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/ll_top_layout"
-        android:orientation="vertical"
+    <RelativeLayout
+        android:id="@+id/rl_call_in_container"
+        android:background="@drawable/bg_call_in"
+        android:clickable="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_call_user_image_head"
-            android:layout_marginTop="54dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/pic_head"
-            android:layout_width="168dp"
-            android:layout_height="168dp" />
+        <LinearLayout
+            android:id="@+id/ll_top_layout"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:textColor="#4f697d"
-            android:layout_marginTop="22dp"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/DOOR_MAGNET_NAME"
-            android:textSize="30sp"
+            <ImageView
+                android:id="@+id/iv_call_user_image_head"
+                android:layout_marginTop="54dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/pic_head"
+                android:layout_width="168dp"
+                android:layout_height="168dp" />
+
+            <TextView
+                android:textColor="#4f697d"
+                android:layout_marginTop="22dp"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/DOOR_MAGNET_NAME"
+                android:textSize="30sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="3dp"
+                android:textSize="16sp"
+                android:text="@string/EFAMILY_VIDEOCALLING1"
+                android:textColor="#4f697d"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="102dp"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="3dp"
-            android:textSize="16sp"
-            android:text="@string/EFAMILY_VIDEOCALLING1"
-            android:textColor="#4f697d"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_ignore_call"
+                android:drawableTop="@drawable/btn_hulue"
+                android:textColor="#5a6a7d"
+                android:textSize="14sp"
+                android:text="@string/EFAMILY_IGNORE"
+                android:drawablePadding="4dp"
+                android:gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="102dp"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_accept_call"
+                android:layout_marginLeft="96dp"
+                android:drawableTop="@drawable/btn_listen"
+                android:textColor="#5a6a7d"
+                android:textSize="14sp"
+                android:text="@string/EFAMILY_CALL_ANSWER"
+                android:drawablePadding="4dp"
+                android:gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_ignore_call"
-            android:drawableTop="@drawable/btn_hulue"
-            android:textColor="#5a6a7d"
-            android:textSize="14sp"
-            android:text="@string/EFAMILY_IGNORE"
-            android:drawablePadding="4dp"
-            android:gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tv_accept_call"
-            android:layout_marginLeft="96dp"
-            android:drawableTop="@drawable/btn_listen"
-            android:textColor="#5a6a7d"
-            android:textSize="14sp"
-            android:text="@string/EFAMILY_CALL_ANSWER"
-            android:drawablePadding="4dp"
-            android:gravity="center_horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+    <include layout="@layout/fragment_cloud_live_videochat"/>
 
-</RelativeLayout>
+</FrameLayout>
