--- a/app/src/main/res/layout/fragment_home_mine_info.xml
+++ b/app/src/main/res/layout/fragment_home_mine_info.xml
@@ -236,30 +236,19 @@
             android:background="@color/color_f2f2f2" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/btn_home_mine_personal_information"
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:clickable="true">
-
-        <TextView
-            android:id="@+id/btn_home_mine_personal_information"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_centerVertical="true"
-            android:padding="10dp"
-            android:text="@string/LOGOUT"
-            android:textColor="@color/color_ff3b30"
-            android:textSize="16sp" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dip"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@color/color_f2f2f2" />
-
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_centerVertical="true"
+        android:padding="10dp"
+        android:text="@string/LOGOUT"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/long_btn_bg_shape_f4f4f4"
+        android:textColor="@color/color_ff3b30"
+        android:textSize="16sp" />
 
 </LinearLayout>
